--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@ body{
 
 </body>
 <script>
-    const year = new Date().getFullYear();
-const myDate = new Date('Oct 15, 2024 00:00:00');
+//    const year = new Date().getFullYear();
+const myDate = new Date('Oct 19, 2023 18:00:00');
 console.log(myDate);
 
 // countdown
@@ -113,7 +113,7 @@ let timer = setInterval(function() {
   const today = new Date().getTime();
 
   // get the difference
-  const diff = myDate - today;
+  const diff = today - myDate;
 
   // math
   let days = Math.floor(diff / (1000 * 60 * 60 * 24));
