--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@ body{
 <div id="timer">
 
     <div class="days"> 
-        <div id="days" class="numbers "> </div>days</div> 
+        <div id="days" class="numbers "> </div>dni</div> 
       <div class="hours"> 
-        <div  id="hours" class="numbers"> </div>hours</div> 
+        <div  id="hours" class="numbers"> </div>godzin</div> 
       <div class="minutes"> 
-        <div  id="minutes" class="numbers"> </div>minutes</div> 
+        <div  id="minutes" class="numbers"> </div>minut</div> 
       <div   class="seconds"> 
-        <div id="seconds" class="numbers"> </div>seconds</div> 
+        <div id="seconds" class="numbers"> </div>sekund</div> 
       </div>
 
 </div>
